--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -47,10 +47,11 @@ jobs:
         run: |
           dir
           cd ..
-          mkdir lil && mkdir lil\src && mkdir lil\src\www && mkdir lil\testsuite
-          cp bin\driver.exe lil
-          xcopy www lil\src\www /E
-          xcopy ..\testsuite lil\testsuite /E
+          dir
+          mkdir lil && mkdir lil/src && mkdir lil/src/www && mkdir lil/testsuite
+          cp bin/driver.exe lil
+          xcopy www lil/src/www /E
+          xcopy ../testsuite lil/testsuite /E
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v2
         with:
