--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -50,7 +50,13 @@ jobs:
           cp build/bin/driver.exe lil
           cp -r build/bin/www lil/src
           cp -r testsuite lil
-          echo "@echo off && echo Game will be on port 4000 or http://localhost:4001 && pause && cd testsuite && ..\driver etc\config.test && echo Game has finished && pause" > lil/startlil.bat
+          echo @echo off >> lil/startlil.bat
+          echo echo Game will be on port 4000, web client on http://localhost:4001 >> lil/startlil.bat
+          echo pause >> lil/startlil.bat
+          echo cd testsuite >> lil/startlil.bat
+          echo ..\driver etc\config.test >> lil/startlil.bat
+          echo echo Game has finished >> lil/startlil.bat
+          echo pause >> lil/startlil.bat
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v2
         with:
