--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -54,7 +54,7 @@ jobs:
           echo echo Game will be on port 4000, web client on http://localhost:4001 >> lil/startlil.bat
           echo pause >> lil/startlil.bat
           echo cd testsuite >> lil/startlil.bat
-          echo ..\driver etc\config.test >> lil/startlil.bat
+          echo ..\\driver etc\\config.test >> lil/startlil.bat
           echo echo Game has finished >> lil/startlil.bat
           echo pause >> lil/startlil.bat
       - name: 'Upload Artifact'
